Rework text align to avoid cross pattern, auto add anchor link to hx with an offset for the fixed nav

--- a/static/style.less
+++ b/static/style.less
@@ -16,3 +16,11 @@
     color: #23527c;
     cursor: pointer;
 }
+
+// add an offset to compensate the fixed navbar
+a.anchor-offset {
+    display: block;
+    position: relative;
+    top: -60px;
+    visibility: hidden;
+}
